<?xml version="1.0"?>
<package format="3">
  <name>lidar_filter</name>
  <version>0.0.1</version>
  <description>Filter LiDAR scan to a limited range and field of view for thermal alignment</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
